--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "mydirectives",
+  "name": "ccDirective",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/ccDirective.js",
   "scripts": {
+    "build": "webpack --config build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cc",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
